# bact-trait-cluster

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-analysis/: SKILL.md
.claude/skills/agent-bio-review/: SKILL.md
.claude/skills/agent-code-review/: SKILL.md
.claude/skills/agent-integration-review/: SKILL.md
.claude/skills/agent-reliability-review/: SKILL.md
.claude/skills/agent-stats-review/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/cross-tool-check/: SKILL.md
.claude/skills/full-ci/: SKILL.md
.claude/skills/generate-synth-data/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/reliability-check/: SKILL.md
.claude/skills/review-stats/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/selfcheck/: SKILL.md
.claude/skills/validate-config/: SKILL.md
.claude/skills/validate-on-real/: SKILL.md
.claude/skills/validate-on-synth/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
docs/: anti_salami_checklist.json
examples/: config.yaml
examples/data/: AMR_genes.csv  MIC.csv  Virulence.csv
examples/real/: cluster_real.yaml  cluster_real_all_layers_strict_prod.yaml
examples/reliability/: consistency_spec_real_paths_template.yaml  consistency_spec_template.yaml  presets_strepsuis_all_layers.yaml  reliable_analysis.yaml  strict_production_real_cohort91_longform_aware.yaml  strict_production_wide_matrices_only.yaml
src/bacttraitcluster/: __init__.py  benchmark.py  cli.py  config.py  dashboard_launcher.py  pipeline.py  selfcheck.py
src/bacttraitcluster/clustering/: __init__.py  consensus.py  model_selection.py  multiview.py  partition_info.py  prediction_strength.py
src/bacttraitcluster/dashboards/: __init__.py  app.py
src/bacttraitcluster/gui/: launch.py  marimo_app.py
src/bacttraitcluster/io/: __init__.py  loader.py
tests/: conftest.py  test_cluster.py  test_validation.py
(+7 files in other folders)
